--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -48,8 +48,7 @@ jobs:
 
       - name: Build Next.js site
         run: |
-          next build
-          next export
+          npm run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
