--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -32,13 +32,14 @@ jobs:
 
       - name: Build Next.js site
         run: |
-          TAILWIND_MODE=build npm run build
-          npm run export
+          npm run build
+          npx serve@latest out
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./out
+
   deploy:
     environment:
       name: github-pages
