--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-vertical-timeline-component": "^3.6.0",
+    "sharp": "^0.33.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
