--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -31,9 +31,7 @@ jobs:
         run: npm ci
 
       - name: Build Next.js site
-        run: |
-          npm run build
-          npx serve@latest out
+        run: npm run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
